@@ -64,6 +64,7 @@ version ?.??.?? (????-??-??):
   - added support for voip tariff rules [kosa/chilan]
   - simplicity syslog code and make it more oop [chilan]
   - more oop improvements for SYSLOG and Auth classes [chilan]
+  - added support for %last_10_in_a_table symbol in lms-notify.php [chilan]
 
 version 1.11.20 (2016-04-19):
 
